--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,22 +2,32 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-weight: 600;
 }
 
 .header {
-  height: 72px;
   background: darkmagenta;
   color: white;
+  font-weight: 900;
+  font-size: 36px;
+  padding: 20px 10px;
 }
 
 .footer {
-  height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  padding: 30px 10px;
 }
 
 .sidebar {
-  width: 300px;
+  flex-basis: 300px;
+  min-width: 300px;
+  flex: 1;
   background: royalblue;
   box-sizing: border-box;
 }
@@ -26,4 +36,36 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 350px;
+  padding: 12px;
+  min-height: 240px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+.content {
+  display: flex;
+  flex: 1;
+  /* flex: 1; */
+}
+
+.board {
+  padding: 24px;
+  padding-right: 64px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+}
+
+li {
+  margin: 12px;
+  font-size: 20px;
 }
