--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,4 +1,4 @@
-/* this is some magical font-importing.  
+/* this is some magical font-importing.
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
@@ -45,4 +45,31 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+
+
+
+
+/* Additional Styles */
+.header {
+  padding-left: 16px;
+  padding-right: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.left-header {
+  display: flex;
+}
+
+ul {
+  display: flex;
+  gap: 8px;
+}
+
+.right-header {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
